# whisperrr

./: .gitignore  README.md  app.py  breeze_main.py  download_youtu.py  download_yt.py  dwnyt.sh  main.py  main_cli.py  next.config.js  package-lock.json  package.json  piyanW  progress.json  pyproject.toml  remove_empty_cn.py  run_with_summary.sh  stop.sh  summary.md  test.py  test_functionality.sh
pages/: index.tsx
scripts/: runwhisper
systemd/: runwhisper.service
