[project]
name = "whisperrr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "google>=3.0.0",
    "google-cloud>=0.34.0",
    "google-cloud-vision>=3.10.2",
    "google-generativeai>=0.8.5",
    "googletrans>=4.0.2",
    "ollama>=0.5.3",
    "openai-whisper>=20250625",
    "pyinstaller>=6.15.0",
    "torchaudio>=2.7.1",
    "transformers>=4.53.2",
    "yt-dlp>=2025.6.30",
]
